prevent flicker on rerendering images

--- a/apps/html5os/urls/index.css
+++ b/apps/html5os/urls/index.css
@@ -372,16 +372,7 @@ div.urlsList {
     padding-right: 6px;
 }
 .fullView .avatar img {
-    filter: blur(3px);
-    -webkit-filter: blur(3px);
-    width: 100%;
-    opacity: 0.33;
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    max-width: 100%;
 }
 
 
